# papdieo

./: Cargo.toml  LICENSE  README.md  install.sh
.github/: copilot-instructions.md
.github/aur-bin/: PKGBUILD  PKGBUILD.template
.github/workflows/: release.yml
aur/: .SRCINFO  PKGBUILD  README-AUR.md  README.md
aur-bin/: .SRCINFO
aur/stable/: .SRCINFO  PKGBUILD  README-AUR-STABLE.md
src/: cli.rs  config.rs  main.rs  picker.rs  wallpaper.rs
