[package]
name = "papdieo"
version = "0.1.0"
edition = "2021"
description = "Hyprland-compatible wallpaper management CLI (papdieo)"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
gstreamer = "0.25"
gstreamer-app = "0.25"
gstreamer-video = "0.25"
image = { version = "0.25", default-features = true }
memmap2 = "0.9"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.1"
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
fs2 = "0.4"
